--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -144,10 +144,11 @@ strong {
   font-weight: var(--font-weight-bold);
 }
 
-.section-title-wrap {
+.section-title {
   background: var(--secondary-color);
   border-radius: var(--border-radius-small);
-  padding: 10px 30px;
+  padding: 25px;
+  text-align: center;
 }
 
 
@@ -483,25 +484,27 @@ strong {
 
 .hero-title,
 .hero h2 {
-  background: var(--white-color);
-  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+  color: var(--white-color);
+  /* box-shadow: 0 1rem 3rem rgba(0,0,0,.175); */
   border-radius: var(--border-radius-large);
   display: inline-block;
   padding: 8px 24px;
 }
 
 .hero-title {
-	font-size: 44px;
+	font-size: 36px;
+  letter-spacing: .5px;
 }
 
 .hero h2 {
-	font-size: 38px;
+	font-size: 18px;
+  letter-spacing: .5px;
 }
 
 .hero-text {
   position: relative;
   z-index: 22;
-  top: 70px;
+  top: 100px;
 }
 
 .hero-image-wrap {
@@ -733,34 +736,36 @@ strong {
   border-color: var(--secondary-color);
 }
 
-.projects-thumb:hover .projects-image,
+/* .projects-thumb:hover .projects-image,
 .projects-thumb:focus .projects-image {
   transform: rotate(0) translateY(0);
-}
+} */
 
 .projects-thumb .popup-image {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
 }
 
 .projects-image {
   border-radius: var(--border-radius-medium);
   display: block;
-  width: 100%;
-  transform: rotate(0deg) translateY(180px);
+  text-align: center;
+  width: 40%;
+  margin-bottom: 5px;
+  /* transform: rotate(0deg) translateY(180px); */
   transition: all ease 0.5s;
 }
 
 .projects-title {
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
 
 .projects-tag {
   font-size: var(--menu-font-size);
   font-weight: var(--font-weight-medium);
   color: var(--secondary-color);
-  text-transform: uppercase;
+  text-transform: capitalize;
   margin-bottom: 5px;
 }
 
