--- a/css/style.css
+++ b/css/style.css
@@ -720,16 +720,17 @@ body {
   transform: translateY(0px);
 }
 
-.containers .cards .face.face1 .content {
+.containers .cards .face.face1 .contents {
+  margin-top: 2px;
   opacity: 1;
   transition: 0.5s;
 }
 
-.containers .cards:hover .face.face1 .content {
+.containers .cards:hover .face.face1 .contents {
   opacity: 1;
 }
 
-.containers .cards .face.face1 .content i{
+.containers .cards .face.face1 .contents i{
   max-width: 100px;
 }
 
@@ -742,17 +743,17 @@ body {
   padding: 20px;
   box-sizing: border-box;
   box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-  transform: translateY(-100px);
+  /* transform: translateY(-100px); */
 }
 
 .containers .cards:hover .face.face2{
   transform: translateY(0);
 }
 
-.containers .cards .face.face2 .content p {
-  margin: 0;
+.containers .cards .face.face2 .contents p {
+  margin-top: 40px;
   padding: 0;
-  text-align: center;
+  /* text-align: center; */
   color: #414141;
 }
 
