--- a/css/templatemo-first-portfolio-style.css
+++ b/css/templatemo-first-portfolio-style.css
@@ -6,14 +6,14 @@ https://templatemo.com/tm-578-first-portfolio
 
 */
 
-
+/* #14B789; */
 /*---------------------------------------
   CUSTOM PROPERTIES ( VARIABLES )             
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
   --primary-color:                #535da1;
-  --secondary-color:              #14B789;
+  --secondary-color:              #FFA500; 
   --section-bg-color:             #f9f9f9;
   --dark-color:                   #000000;
   --p-color:                      #717275;
